Spacing issues fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,6 +277,8 @@ h5 {
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 2%;
+  margin-left: 5%;
+  margin-right: 5%;
 
 }
 
